<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorkShiitSender</string>
    <string name="action_settings">功能</string>
    <string name="main">二選一</string>
    <string name="buttonWorkSheet">檢視工作日誌</string>
    <string name="buttonSender">寄送郵件</string>
    <string name="home">回首頁</string>
    
    <string name="recipient">收件者：</string>
    <string name="subject">主旨：</string>
    <string name="content">信件內文：</string>
    <string name="send">寄送郵件</string>
    
    <string name="fileName">檔名</string>
    <string name="startDate">開始日期</string>
    <string name="consutantName">姓名</string>
    <string name="date">日期</string>
    <string name="hours">時數</string>
    <string name="system">系統</string>
    <string name="deliverable">實際完成</string>
    <string name="submit">確認修改</string>

</resources>