<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/table"
    android:orientation="vertical"
    tools:context=".EmailSenderActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textRecipient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editRecipient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/subject"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/content"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:background="#CCFFFF"
        android:text="@string/send"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:background="#FFFFDD"
        android:padding="10sp"
        android:text="@string/home"
        android:textSize="20sp" >
    </Button>

</LinearLayout>